--- a/templates/Admin/profil_up/restaurant.html.twig
+++ b/templates/Admin/profil_up/restaurant.html.twig
@@ -4,7 +4,7 @@
             <label for="tel" class="hidden md:block">Téléphone :</label>
             <div class="form_inputContainer input_profil">
                 <i class="fa-solid fa-phone"></i>
-                <input type="tel" name="tel" id="tel" required placeholder="{{ restaurant.tel }}" pattern='^(?:0|\+33)[1-9](?:\d{2}){4}$'>
+                <input class="input_whitePlaceholder" type="tel" name="tel" id="tel" required placeholder="{{ restaurant.tel }}" pattern='^(?:0|\+33)[1-9](?:\d{2}){4}$'>
                 <button type="submit" id="change_tel"><i class="fa-solid fa-pen"></i></button>
             </div>
         </form>
@@ -12,7 +12,7 @@
             <label for="emailRestaurant" class="hidden md:block">Email :</label>
             <div class="form_inputContainer input_profil">
                 <i class="fa-solid fa-phone"></i>
-                <input type="email" name="emailRestaurant" id="emailRestaurant" required placeholder="{{ restaurant.email }}" minlength=5 maxlength=50>
+                <input class="input_whitePlaceholder" type="email" name="emailRestaurant" id="emailRestaurant" required placeholder="{{ restaurant.email }}" minlength=5 maxlength=50>
                 <button type="submit" id="change_email"><i class="fa-solid fa-pen"></i></button>
             </div>
         </form>
@@ -20,7 +20,7 @@
             <label for="city" class="hidden md:block">Ville :</label>
             <div class="form_inputContainer input_profil">
                 <i class="fa-solid fa-city"></i>
-                <input type="text" name="city" id="city" required placeholder="{{ restaurant.city }}" minlength=2 maxlength=50>
+                <input class="input_whitePlaceholder" type="text" name="city" id="city" required placeholder="{{ restaurant.city }}" minlength=2 maxlength=50>
                 <button type="submit" id="change_city"><i class="fa-solid fa-pen"></i></button>
             </div>
         </form>
@@ -28,7 +28,7 @@
             <label for="street" class="hidden md:block">Rue :</label>
             <div class="form_inputContainer input_profil">
                 <i class="fa-solid fa-street-view"></i>
-                <input type="text" name="street" id="street" required placeholder="{{ restaurant.street }}" minlength=5 maxlength=80>
+                <input class="input_whitePlaceholder" type="text" name="street" id="street" required placeholder="{{ restaurant.street }}" minlength=5 maxlength=80>
                 <button type="submit" id="change_street"><i class="fa-solid fa-pen"></i></button>
             </div>
         </form>
@@ -36,7 +36,7 @@
             <label for="postcode" class="hidden md:block">Code postale :</label>
             <div class="form_inputContainer input_profil">
                 <i class="fa-solid fa-house"></i>
-                <input type="number" name="postcode" id="postcode" required placeholder="{{ restaurant.postcode }}" pattern='\d{5}$\' minlength=5 maxlength=5> 
+                <input class="input_whitePlaceholder" type="number" name="postcode" id="postcode" required placeholder="{{ restaurant.postcode }}" pattern='\d{5}$\' minlength=5 maxlength=5> 
                 <button type="submit" id="change_postcode"><i class="fa-solid fa-pen"></i></button>
             </div>
         </form>
@@ -44,7 +44,7 @@
             <label for="places" class="hidden md:block">Couverts maximum :</label>
             <div class="form_inputContainer input_profil">
                 <i class="fa-solid fa-utensils"></i>
-                <input type="number" name="places" id="places" required placeholder={{ restaurant.places }} placeholder="\d{1,3}$\" minlength=1 maxlength=3>
+                <input class="input_whitePlaceholder" type="number" name="places" id="places" required placeholder={{ restaurant.places }} placeholder="\d{1,3}$\" minlength=1 maxlength=3>
                 <button type="submit" id="change_places"><i class="fa-solid fa-pen"></i></button>
             </div>
         </form>
