--- a/templates/Login/login.form.html.twig
+++ b/templates/Login/login.form.html.twig
@@ -24,14 +24,14 @@
                     <div class="form_container">
                         <label for="username">Email :</label>
                         <div class="form_inputContainer">
-                            <i class="fa-solid fa-at"></i>
+                            <i class="fa-solid fa-at form_icon"></i>
                             <input type="text" id="username" name="_username" value="{{ last_email }}">
                         </div>
                     </div>
                     <div class="form_container">
                         <label for="password">Mot de passe :</label>
                         <div class="form_inputContainer">
-                            <i class="fa-solid fa-lock"></i>
+                            <i class="fa-solid fa-lock form_icon"></i>
                             <input type="password" id="password" name="_password">
                             <span role="button" onclick="togglePassword(event)">
                                 <i class="fa-solid fa-eye w-[36px] hide" ></i>
