--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -15,7 +15,7 @@
             <div class="form_container">
                 {{ form_label(requestForm.email) }}
                 <div class="form_inputContainer">
-                    <i class="fa-solid fa-at"></i>
+                    <i class="fa-solid fa-at form_icon"></i>
                     {{ form_widget(requestForm.email) }}
                 </div>
                 <small class="form_error">
