--- a/templates/Admin/profil_down/carousel.html.twig
+++ b/templates/Admin/profil_down/carousel.html.twig
@@ -1,6 +1,6 @@
 <div class="text-secondary bg-600">
     <div class="drop-shadow-lg">
-        <section class="after py-4 relative">
+        <section class="after py-6 relative">
             <p class="w-11/12 mx-auto max-w-[598px] pb-3">Ajouter une photo :</p>
             {{ form_start(form_image, { 'attr' : { 'class' :'w-11/12 mx-auto max-w-[598px]'}})}}
             <div class="lg:flex lg:justify-between">
@@ -31,14 +31,14 @@
         </section>
         <section class="">
         {% for image in images_carousel %}
-            <div class="w-11/12 max-w-[380px] mx-auto flex flex-col gap-2 py-4 justify-center">
+            <div class="w-11/12 max-w-[380px] mx-auto flex flex-col gap-2 py-6 justify-center">
                 <div class="w-full flex gap-2 justify-center">
                     <form method="POST" onSubmit = "setTitle(event)" class="flex gap-2 flex-1">
                         <label hidden for="{{ 'title_'~ image.id}}">Titre</label>
                         <input type="text" minLength=2 maxlength=50 id="{{ 'title_'~ image.id }}" name="{{ 'title_'~ image.id }}" required value="{{ image.title }}" class="input_carousel input_withoutIcon flex-1">
                         <button aria-label="Modifier" type="submit" id="{{ 'set_title_'~ image.id }}" class="input_carousel button_profil"><i class="fa-solid fa-pen"></i></button>
                     </form>
-                    <button aria-label = 'Supprimer' onClick="deleteImage(event)" id="{{ 'delete_'~ image.id }}" class="input_carousel button_profil"><i class="fa-solid fa-trash h-full button-full"></i></i></button>
+                    <button aria-label = 'Supprimer' onClick="deleteImage(event)" id="{{ 'delete_'~ image.id }}" class="input_carousel button_profil"><i class="fa-solid fa-trash h-full button-full"></i></button>
                 </div>
                 <form method="POST" onSubmit ="setDescription(event)" class="flex gap-2 justify-center">
                     <label hidden for="{{ 'description'~ image.id}}">Description</label>
