--- a/templates/SignUp/form/signUp.form.html.twig
+++ b/templates/SignUp/form/signUp.form.html.twig
@@ -31,7 +31,7 @@
                         <div class="form_container">
                             {{ form_label(form.email) }}
                             <div class="form_inputContainer">
-                                <i class="fa-solid fa-at"></i>
+                                <i class="fa-solid fa-at form_icon"></i>
                                 {{ form_widget(form.email) }}
                             </div>
                             <div>
@@ -41,7 +41,7 @@
                         <div class="form_container">
                             {{ form_label(form.password) }}
                             <div class="form_inputContainer">
-                                <i class="fa-solid fa-lock"></i>
+                                <i class="fa-solid fa-lock form_icon"></i>
                                 {{ form_widget(form.password) }}
                                 <span role="button" onclick="togglePassword(event)">
                                     <i class="fa-solid fa-eye w-[36px] hide" ></i>
@@ -55,7 +55,7 @@
                         <div class="form_container">
                             {{ form_label(form.confirm) }}
                             <div class="form_inputContainer">
-                                <i class="fa-solid fa-lock"></i>
+                                <i class="fa-solid fa-lock form_icon"></i>
                                 {{ form_widget(form.confirm) }}
                                 <span role="button" onclick="togglePassword(event)">
                                     <i class="fa-solid fa-eye hide w-[36px]"></i>
