feat : modifying food in bdd

--- a/templates/Admin/profil_down/card/card.html.twig
+++ b/templates/Admin/profil_down/card/card.html.twig
@@ -19,3 +19,10 @@
     {% endblock %}
 </div>
 {% endblock %}
+
+{% block scripts %}
+    parent()
+{% if page_three == 'entrées' %} 
+    <script src={{ asset('js/profil/'~'handleRequest.food.js') }}></script>
+{% endif %}
+{% endblock %}
