--- a/templates/Admin/profil_down/card/starter/starter.html.twig
+++ b/templates/Admin/profil_down/card/starter/starter.html.twig
@@ -35,7 +35,7 @@
 	</section>
 	<section class="flex flex-col gap-7 py-6">
 		{% for value in values %}
-			<form class="bg-600 w-11/12 mx-auto max-w-[598px] p-4 text-secondary flex gap-2">
+			<form onSubmit="setFood(event)" class="bg-600 w-11/12 mx-auto max-w-[598px] p-4 text-secondary flex gap-2">
 				<div class="flex gap-2 flex-col flex-1">
 					<div class="">
 						<label hidden for="{{ 'title_'~ value.id }}">Titre :</label>
@@ -43,12 +43,12 @@
 						<small class="form_error"></small>
 					</div>
 					<div class="">
-						<label hidden for="{{ 'description_'~ value.id }}">Titre :</label>
-						<input type="text" name="{{ 'description_'~ value.id }}" id="{{ 'description_'~ value.id }}" class="w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" required value="{{ value.description }}">
+						<label hidden for="{{ 'description_'~ value.id }}">Description :</label>
+						<input type="text" name="{{ 'description_'~ value.id }}" id="{{ 'description_'~ value.id }}" class="w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" value="{{ value.description }}">
 						<small class="form_error"></small>
 					</div>
 					<div class="w-[120px]">
-						<label hidden for="{{ 'price_'~ value.id }}">Titre :</label>
+						<label hidden for="{{ 'price_'~ value.id }}">Prix :</label>
 						<div class="flex input_profil items-center">
                             <i class="fa-solid fa-euro-sign form_icon bg-primary/20"></i>
                             <input type="text" name="{{ 'price_'~ value.id }}" id="{{ 'price_'~ value.id }}" class="w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" required value="{{ value.price }}">
@@ -58,10 +58,11 @@
 				</div>
 				<div class="flex flex-col gap-2">
 					<button aria-label="Modifier" type="submit" class="bg-primary/50 button_profil">
-						<i class="fa-solid fa-trash h-full button-full"></i>
+						<i class="fa-solid fa-pen"></i>
+
 					</button>
 					<button aria-label="Supprimer" id="{{ 'delete_'~ value.id }}" onclick="deleteFood(event)" class="bg-primary/50 button_profil">
-						<i class="fa-solid fa-pen"></i>
+						<i class="fa-solid fa-trash h-full button-full"></i>
 					</button>
 				</div>
 			</form>
