feat: add/display/delete main

--- a/templates/Admin/profil_down/card/card.html.twig
+++ b/templates/Admin/profil_down/card/card.html.twig
@@ -6,7 +6,7 @@
         <nav class="profil_menu overflow-y-hidden overflow-x-auto h-[50px] flex items-end">
             <ul>
                 <li class="text-primary"><a href="{{ path('admin_card', {'page_up' : page_up, 'page_down' : 'card', 'page_three' : 'entrées' })}}" class="hover:-translate-y-1 bg-500/60 duration-100 rounded-t-3xl">Entrées</a></li>
-                <li><a href="{{ path('admin_card', {'page_up' : page_up, 'page_down' : 'card', 'page_three' : 'Plats' })}}">Plats</a></li>
+                <li class="text-secondary"><a href="{{ path('admin_card', {'page_up' : page_up, 'page_down' : 'card', 'page_three' : 'plats' })}}" class="hover:-translate-y-1 bg-primary/85 duration-100 rounded-t-3xl">Plats</a></li>
                 <li><a href="{{ path('admin_card', {'page_up' : page_up, 'page_down' : 'card', 'page_three' : 'Desserts' })}}">Desserts</a></li>
                 <li><a href="{{ path('admin_card', {'page_up' : page_up, 'page_down' : 'card', 'page_three' : 'Menus' })}}">Menus</a></li>
             </ul>
@@ -15,6 +15,8 @@
     {% block card_down %}
         {% if page_three == 'entrées' %}
             {% include 'Admin/profil_down/card/starter/starter.html.twig' %}
+        {% elseif page_three == 'plats' %}
+            {% include 'Admin/profil_down/card/main/main.html.twig' %}
         {% endif %}
     {% endblock %}
 </div>
@@ -22,7 +24,8 @@
 
 {% block scripts %}
     parent()
-{% if page_three == 'entrées' %} 
+{% if page_three == 'menus' %} 
+{% else %}
     <script src={{ asset('js/profil/'~'handleRequest.food.js') }}></script>
 {% endif %}
 {% endblock %}
