--- a/templates/Admin/profil_down/card/dessert/dessert.html.twig
+++ b/templates/Admin/profil_down/card/dessert/dessert.html.twig
@@ -1,7 +1,7 @@
-<div class="drop-shadow-lg bg-500/60">
+<div class="drop-shadow-lg bg-600 text-secondary">
 	<section class="py-6 after relative">
 		<p class="w-11/12 mx-auto max-w-[598px] pb-3 underline underline-offset-2">Ajouter une entrée :</p>
-		{{ form_start(form_card, { 'attr' :{ 'class' : 'bg-600 w-11/12 mx-auto max-w-[598px] flex gap-2 justify-center p-4 text-secondary'}}) }}
+		{{ form_start(form_card, { 'attr' :{ 'class' : 'bg-primary/40 w-11/12 mx-auto max-w-[598px] flex gap-2 justify-center p-4 text-secondary'}}) }}
 		<div class="flex gap-2 flex-col flex-1">
 			<div class="">
 				<div class="hidden">{{ form_label(form_card.title) }}</div>
@@ -31,21 +31,19 @@
 		<button type="submit" id="add_image" class="bg-primary/50 button_profil">
 			<i class="fa-solid fa-plus text-secondary"></i>
 		</button>
-		{{ form_end(form_card, {}) }}
+		{{ form_end(form_card) }}
 	</section>
 	<section class="flex flex-col gap-7 py-6">
 		{% for value in values %}
-			<form onSubmit="setFood(event)" class="bg-600 w-11/12 mx-auto max-w-[598px] p-4 text-secondary flex gap-2">
+			<form onSubmit="setFood(event)" class="bg-primary/40 w-11/12 mx-auto max-w-[598px] p-4 text-secondary flex gap-2">
 				<div class="flex gap-2 flex-col flex-1">
 					<div class="">
 						<label hidden for="{{ 'title_'~ value.id }}">Titre :</label>
 						<input type="text" name="{{ 'title_'~ value.id }}" id="{{ 'title_'~ value.id }}" class="w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" required value="{{ value.title }}">
-						<small class="form_error"></small>
 					</div>
 					<div class="">
 						<label hidden for="{{ 'description_'~ value.id }}">Description :</label>
 						<input type="text" name="{{ 'description_'~ value.id }}" id="{{ 'description_'~ value.id }}" class="w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" value="{{ value.description }}">
-						<small class="form_error"></small>
 					</div>
 					<div class="w-[120px]">
 						<label hidden for="{{ 'price_'~ value.id }}">Prix :</label>
@@ -53,13 +51,11 @@
                             <i class="fa-solid fa-euro-sign form_icon bg-primary/20"></i>
                             <input type="text" name="{{ 'price_'~ value.id }}" id="{{ 'price_'~ value.id }}" class="w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" required value="{{ value.price }}">
                         </div>
-						<small class="form_error"></small>
 					</div>
 				</div>
 				<div class="flex flex-col gap-2">
 					<button aria-label="Modifier" type="submit" class="bg-primary/50 button_profil">
 						<i class="fa-solid fa-pen"></i>
-
 					</button>
 					<button aria-label="Supprimer" id="{{ 'delete_'~ value.id }}" onclick="deleteFood(event)" class="bg-primary/50 button_profil">
 						<i class="fa-solid fa-trash h-full button-full"></i>
