--- a/templates/Admin/profil_down/card/card.html.twig
+++ b/templates/Admin/profil_down/card/card.html.twig
@@ -8,7 +8,7 @@
                 <li class="text-primary"><a href="{{ path('admin_card', {'page_up' : page_up, 'page_down' : 'card', 'page_three' : 'entrées' })}}" class="hover:-translate-y-1 bg-500/60 duration-100 rounded-t-3xl">Entrées</a></li>
                 <li class="text-secondary"><a href="{{ path('admin_card', {'page_up' : page_up, 'page_down' : 'card', 'page_three' : 'plats' })}}" class="hover:-translate-y-1 bg-primary/85 duration-100 rounded-t-3xl">Plats</a></li>
                 <li class="text-secondary"><a href="{{ path('admin_card', {'page_up' : page_up, 'page_down' : 'card', 'page_three' : 'desserts' })}}" class="hover:-translate-y-1 bg-600 duration-100 rounded-t-3xl">Desserts</a></li>
-                <li><a href="{{ path('admin_card', {'page_up' : page_up, 'page_down' : 'card', 'page_three' : 'Menus' })}}">Menus</a></li>
+                <li class="text-secondary"><a href="{{ path('admin_card', {'page_up' : page_up, 'page_down' : 'card', 'page_three' : 'menus' })}}" class="hover:-translate-y-1 bg-500 duration-100 rounded-t-3xl">Menus</a></li>
             </ul>
         </nav>
     </div>
@@ -19,6 +19,8 @@
             {% include 'Admin/profil_down/card/main/main.html.twig' %}
         {% elseif page_three == 'desserts' %}
             {% include 'Admin/profil_down/card/dessert/dessert.html.twig' %}
+        {% else %}
+            {% include 'Admin/profil_down/card/menus/menus.html.twig' %}
         {% endif %}
     {% endblock %}
 </div>
@@ -27,6 +29,7 @@
 {% block scripts %}
     parent()
 {% if page_three == 'menus' %} 
+    <script src={{ asset('js/profil/'~'handleRequest.menus.js') }}></script>
 {% else %}
     <script src={{ asset('js/profil/'~'handleRequest.food.js') }}></script>
 {% endif %}
