--- a/templates/Admin/profil_down/card/menus/menus.html.twig
+++ b/templates/Admin/profil_down/card/menus/menus.html.twig
@@ -11,7 +11,7 @@
                         {{ form_errors(form_menu.title) }}
                     </small>
                 </div>
-                <button type="submit" id="add_image" class="bg-primary/50 button_profil">
+                <button type="submit" class="bg-primary/50 button_profil">
                     <i class="fa-solid fa-plus text-secondary"></i>
                 </button>
             </div>
@@ -19,25 +19,63 @@
         </div>
     <ul class="offers"
         data-index="{{ form_menu.offers|length > 0 ? form_menu.offers|last.vars.name + 1 : 0 }}"
-        data-prototype="{{ _self.offers_prototype(form_menu.offers.vars.prototype)|e('html_attr') }}"
+        data-prototype="{{ _self.offers_prototype_empty(form_menu.offers.vars.prototype)|e('html_attr') }}"
         >
         {% for offer in form_menu.offers %}
-
-            {{ _self.offers_prototype(offer) }}
+            {{ _self.offers_prototype_empty(offer) }}
         {% endfor %}
     </ul>
     {{ form_rest(form_menu) }}
     {{ form_end(form_menu) }}
     </section>
+    <section class="flex flex-col gap-7 py-6">
+        <ul>
+        {% for menu in menus %}
+            <li class="after my-2 relative after:bg-secondary/50 after:w-2/5 flex flex-col gap-2">
+                <form onSubmit="setMenu(event)" method="post" class="bg-600 w-11/12 mx-auto max-w-[598px] flex flex-col justify-center p-4 text-secondary" id="{{ 'menu_'~ menu.id }}">
+                    <div class="after relative after:bg-secondary after:opacity-50">
+                        <div class="flex gap-8">
+                            <div class="flex gap-2 flex-1">
+                                <div class="flex-1">
+                                    <label for="{{ 'title_'~ menu.id }}" hidden>{{ menu.title }}</label>
+                                    <input type="text" id="{{ 'title_'~ menu.id }}" name="{{ 'title_'~ menu.id }}" value="{{ menu.title }}" class="w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" value="{{ menu.title }}">
+                                </div>
+                                <div class="flex gap-2">
+                                    <button type="submit" class="bg-primary/50 button_profil" aria-label="Modifier">
+                                        <i class="fa-solid fa-plus text-secondary"></i>
+                                    </button>
+                                    <button aria-label="Supprimer" id="{{ 'delete_'~ menu.id }}" onclick="handleDeleteOffer(event)" class="">
+                                        <i class="fa-solid fa-trash bg-primary/50 button_profil button-full"></i>
+                                    </button>
+                                </div>
+                            </div>
+                            <button class="text-2xl">
+                                <i class="fa-solid fa-caret-down text-secondary"></i>
+                                <i class="hide fa-solid fa-caret-up"></i>
+                            </button>
+                        </div>
+                        <button type="button" class="text-secondary bg-primary/50 px-4 py-2 relative left-1/2 -translate-x-1/2 my-3" onclick="addOffer(event)">Ajouter une formule</button>
+                    </div>
+                    <ul class="modify_offers" 
+                    >
+                    {% for key, offer in menu.offers %}
+                        {{ _self.offers_prototype(key, offer) }}
+                    {% endfor %}
+                    </ul>
+                </form>
+            </li>
+        {% endfor %}
+        </ul>
+    </section>
 </div>
 
 
-{% macro offers_prototype(offer) %}
-<li class="after my-2 relative after:bg-secondary/50 after:w-2/5 flex flex-col gap-2">
-    <div class="name flex gap-2">
-        <div class="flex-1">
+{% macro offers_prototype_empty(offer) %}
+<li class="offer_model after my-2 relative after:bg-secondary/50 after:w-2/5 flex flex-col gap-2">
+    <div class="flex gap-2">
+        <div class="name flex flex-1 gap-1">
             <div class="hidden">{{ form_label(offer.title) }}</div>
-            {{ form_widget(offer.title, { 'attr' : { 'class' : 'w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon' }}) }}
+            {{ form_widget(offer.title, { 'attr' : { 'class' : 'offer_title_model flex-1 w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon' }}) }}
             <small class="form_error">
                 {{ form_errors(offer.title) }}
             </small>
@@ -45,7 +83,7 @@
     </div>
     <div>
         <div class="hidden">{{ form_label(offer.conditions) }}</div>
-        {{ form_widget(offer.conditions, { 'attr' : { 'class' : 'w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon' }}) }}
+        {{ form_widget(offer.conditions, { 'attr' : { 'class' : 'offer_conditions_model w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon' }}) }}
         <small class="form_error">
             {{ form_errors(offer.conditions) }}
         </small>
@@ -54,12 +92,12 @@
         <p class="underline underline-offset-2">Composition :</p>
         <button type="button" class="add_item_link text-secondary bg-primary/50 px-4 py-1" data-collection-holder-class="compositions">Ajouter</button>
     </div>
-    <ol class="compositions flex flex-col gap-2"
+    <ol class="compositions_model compositions flex flex-col gap-2"
     data-index="{{ offer.description|length > 0 ? offer.description|last.vars.name + 1 : 0 }}"
-    data-prototype="{{  _self.compositions_prototype(offer.description.vars.prototype)|e('html_attr') }}"
+    data-prototype="{{  _self.compositions_prototype_empty(offer.description.vars.prototype)|e('html_attr') }}"
     >
     {% for composition in offer.description %}
-        {{ _self.compositions_prototype(composition) }}
+        {{ _self.compositions_prototype_empty(composition) }}
     {% endfor %}
     </ol>
     <div class="my-2 relative after:conten-[''] before:absolute before:w-[100px] before:h-px before:bg-secondary before:opacity-50 before:-top-2">
@@ -74,14 +112,53 @@
     </div>
 </li>
 {% endmacro %}
-{% macro compositions_prototype(composition) %}
+{% macro compositions_prototype_empty(composition) %}
     <li class="name flex gap-2" >
         <div class="flex-1">
             <div class="hidden">{{ form_label(composition) }}</div>
-            {{ form_widget(composition, { 'attr' : { 'class' : 'flex-1 pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon', 'placeholder' : 'Plat...' }}) }}
+            {{ form_widget(composition, { 'attr' : { 'class' : 'offer_model pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon', 'placeholder' : 'Plat...' }}) }}
             <small class="form_error">
                 {{ form_errors(composition) }}
             </small>
+        </div>
+    </li>
+{% endmacro %}
+{% macro offers_prototype(key, offer) %}
+<li class="after my-2 relative after:bg-secondary/50 after:w-2/5 flex flex-col gap-2" >
+    <div class="flex gap-2">
+        <div class="flex-1">
+            <label hidden for="{{'offer_title_'~ key }}">Titre :</label>
+            <input required type="text" class="w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" id="{{ 'offer_title_'~ key}}" name="{{ 'offer_title_'~ key}}" value="{{ offer.title }}">
+        </div>
+    </div>
+    <div>
+        <label hidden for="{{'offer_conditions_'~ key }}">Conditions :</label>
+        <input required type="text" class="w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" id="{{ 'offer_conditions_'~ key}}" name="{{ 'offer_conditions_'~ key}}" value="{{ offer.conditions }}" placeholder="Condition(s)...">
+    </div>
+    <div class="flex justify-between items-center">
+        <p class="underline underline-offset-2">Composition :</p>
+        <button type="button" class="add_item_link text-secondary bg-primary/50 px-4 py-1" onclick="addComposition(event)">Ajouter</button>
+    </div>
+    <ol class="compositions flex flex-col gap-2"
+    >
+    {% for key, composition in offer.description %}
+        {{ _self.compositions_prototype(key, composition) }}
+    {% endfor %}
+    </ol>
+    <div class="my-2 relative after:conten-[''] before:absolute before:w-[100px] before:h-px before:bg-secondary before:opacity-50 before:-top-2">
+        <label for="{{ 'price_'~ key }}" hidden>Prix :</label>
+        <div class="flex items-center input_profil w-[120px]">
+            <i class="fa-solid fa-euro-sign form_icon bg-primary/20"></i>
+            <input required type="number" class="w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" id="{{ 'price_'~ key}}" name="{{ 'price_'~ key}}" value="{{ offer.price }}" >
+        </div>
+    </div>
+</li>
+{% endmacro %}
+{% macro compositions_prototype(key, composition) %}
+    <li class="name flex gap-2" data-index={{ key }} >
+        <div class="flex-1">
+            <label hidden for="{{'offer_composition_title_'~ key }}">Composer de...</label>
+            <input required type="text" class="'pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" id="{{ 'offer_composition_title__'~ key}}" name="{{ 'offer_composition_title__'~ key}}" value="{{ composition }}">
         </div>
     </li>
 {% endmacro %}
