feat: see/unsee menu

--- a/templates/Admin/profil_down/card/menus/menus.html.twig
+++ b/templates/Admin/profil_down/card/menus/menus.html.twig
@@ -50,9 +50,10 @@
                                     </button>
                                 </div>
                             </div>
-                            <button class="text-2xl">
-                                <i class="fa-solid fa-caret-down text-secondary"></i>
-                                <i class="hide fa-solid fa-caret-up"></i>
+                            <button class="text-2xl" onclick="showMenu(event)">
+                                <i class="fa-solid fa-caret-down text-secondary button-full"></i>
+                                {# HIDE #}
+                                <i class="hide fa-solid fa-caret-up button-full"></i>
                             </button>
                         </div>
                         {# HIDE DIV #}
