--- a/templates/Admin/profil_down/card/menus/menus.html.twig
+++ b/templates/Admin/profil_down/card/menus/menus.html.twig
@@ -17,14 +17,14 @@
             </div>
             <button type="button" class="add_item_link text-secondary bg-primary/50 px-4 py-2 relative left-1/2 -translate-x-1/2 my-3" data-collection-holder-class="offers">Ajouter une formule</button>
         </div>
-    <ul class="offers"
-        data-index="{{ form_menu.offers|length > 0 ? form_menu.offers|last.vars.name + 1 : 0 }}"
-        data-prototype="{{ _self.offers_prototype_empty(form_menu.offers.vars.prototype)|e('html_attr') }}"
-        >
-        {% for offer in form_menu.offers %}
-            {{ _self.offers_prototype_empty(offer) }}
-        {% endfor %}
-    </ul>
+        <ul class="offers"
+            data-index="{{ form_menu.offers|length > 0 ? form_menu.offers|last.vars.name + 1 : 0 }}"
+            data-prototype="{{ _self.offers_prototype_empty(form_menu.offers.vars.prototype)|e('html_attr') }}"
+            >
+            {% for offer in form_menu.offers %}
+                {{ _self.offers_prototype_empty(offer) }}
+            {% endfor %}
+        </ul>
     {{ form_rest(form_menu) }}
     {{ form_end(form_menu) }}
     </section>
@@ -33,17 +33,16 @@
         {% for key, menu in menus %}
             <li class="after my-2 relative after:bg-secondary/50 after:w-2/5 flex flex-col gap-2">
                 <form onSubmit="setMenu(event)" method="post" class="bg-600 w-11/12 mx-auto max-w-[598px] flex flex-col justify-center p-4 text-secondary" id="{{ 'menu_'~ menu.id }}">
-                    {# AFTER #}
                     <div class="relative after:bg-secondary after:opacity-50">
                         <div class="flex gap-8">
                             <div class="flex gap-2 flex-1">
                                 <div class="flex-1">
                                     <label for="{{ 'title_'~ menu.id }}" hidden>{{ menu.title }}</label>
-                                    <input type="text" id="{{ 'title_'~ menu.id }}" name="{{ 'title_'~ menu.id }}" value="{{ menu.title }}" class="w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" value="{{ menu.title }}">
+                                    <input minLength=2 maxLength=150  required type="text" id="{{ 'title_'~ menu.id }}" name="{{ 'title_'~ menu.id }}" value="{{ menu.title }}" class="w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" value="{{ menu.title }}">
                                 </div>
                                 <div class="flex gap-2">
                                     <button type="submit" class="bg-primary/50 button_profil" aria-label="Modifier">
-                                        <i class="fa-solid fa-plus text-secondary"></i>
+                                        <i class="fa-solid fa-pen text-secondary button-full"></i>
                                     </button>
                                     <button aria-label="Supprimer" id="{{ 'delete_'~ menu.id }}" onclick="handleDeleteOffer(event)" class="">
                                         <i class="fa-solid fa-trash bg-primary/50 button_profil button-full"></i>
@@ -52,11 +51,9 @@
                             </div>
                             <button class="text-2xl" onclick="showMenu(event)">
                                 <i class="fa-solid fa-caret-down text-secondary button-full"></i>
-                                {# HIDE #}
                                 <i class="hide fa-solid fa-caret-up button-full"></i>
                             </button>
                         </div>
-                        {# HIDE DIV #}
                         <button type="button" class="hide text-secondary bg-primary/50 px-4 py-2 relative left-1/2 -translate-x-1/2 my-3" onclick="addOffer(event)">Ajouter une formule</button>
                     </div>
                     <ul class="modify_offers hide" 
@@ -131,12 +128,12 @@
     <div class="flex gap-2">
         <div class="flex-1">
             <label hidden for="{{'offer_title_'~ key }}">Titre :</label>
-            <input required type="text" class="w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" id="{{ 'offer_title_'~ key}}" name="{{ 'offer_title_'~ key}}" value="{{ offer.title }}">
+            <input required minLength=2 maxLength=150  type="text" class="w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" id="{{ 'offer_title_'~ key}}" name="{{ 'offer_title_'~ key}}" value="{{ offer.title }}">
         </div>
     </div>
     <div>
         <label hidden for="{{'offer_conditions_'~ key }}">Conditions :</label>
-        <input type="text" class="w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" id="{{ 'offer_conditions_'~ key}}" name="{{ 'offer_conditions_'~ key}}" value="{{ offer.conditions }}" placeholder="Condition(s)...">
+        <input maxLength=150  type="text" class="w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" id="{{ 'offer_conditions_'~ key}}" name="{{ 'offer_conditions_'~ key}}" value="{{ offer.conditions }}" placeholder="Condition(s)...">
     </div>
     <div class="flex justify-between items-center">
         <p class="underline underline-offset-2">Composition :</p>
@@ -161,7 +158,7 @@
     <li class="name flex gap-2">
         <div class="flex-1">
             <label hidden for="{{'offer_'~ key_menu ~'_composition_title_'~ key }}">Composer de...</label>
-            <input required type="text" class="'pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" id="{{'offer_'~ key_menu ~'_composition_title_'~ key }}" name="{{'offer_'~ key_menu ~'_composition_title_'~ key }}" value="{{ composition }}" placeholder="Plat...">
+            <input required minLength="2" maxLength="200"  type="text" class="pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" id="{{'offer_'~ key_menu ~'_composition_title_'~ key }}" name="{{'offer_'~ key_menu ~'_composition_title_'~ key }}" value="{{ composition }}" placeholder="Plat...">
         </div>
         {% if key >= 1 %}
         <button>
