--- a/templates/Admin/profil_down/card/menus/menus.html.twig
+++ b/templates/Admin/profil_down/card/menus/menus.html.twig
@@ -32,7 +32,7 @@
         <ul>
         {% for key_menu, menu in menus %}
             <li class="after my-2 relative after:bg-secondary/50 after:w-2/5 flex flex-col gap-2">
-                <form onSubmit="setMenu(event)" method="post" class="bg-600 w-11/12 mx-auto max-w-[598px] flex flex-col justify-center p-4 text-secondary" id="{{ 'menu_'~ menu.id }}">
+                <form onSubmit="setMenu(event)" method="post" class="bg-600 w-11/12 mx-auto max-w-[598px] flex flex-col justify-center p-4 text-secondary" id="{{ 'menu_'~ menu.id }}" data-index-menu = {{ key_menu }}>
                     <div class="relative after:bg-secondary after:opacity-50">
                         <div class="flex gap-8">
                             <div class="flex gap-2 flex-1">
@@ -54,7 +54,7 @@
                                 <i class="hide fa-solid fa-caret-up button-full"></i>
                             </button>
                         </div>
-                        <button type="button" class="hide text-secondary bg-primary/50 px-4 py-2 relative left-1/2 -translate-x-1/2 my-3" onclick="addOffer(event)">Ajouter une formule</button>
+                        <button type="button" class="hide text-secondary bg-primary/50 px-4 py-2 relative left-1/2 -translate-x-1/2 my-3" onclick="addOffer(event)" data-index-menu = {{ key_menu }} data-index-offer = {{ menu.offers|length }}>Ajouter une formule</button>
                     </div>
                     <ul class="modify_offers hide" 
                     >
