feat: check pattern of entry

--- a/templates/Admin/profil_down/card/menus/menus.html.twig
+++ b/templates/Admin/profil_down/card/menus/menus.html.twig
@@ -44,7 +44,7 @@
                                     <button type="submit" class="bg-primary/50 button_profil" aria-label="Modifier">
                                         <i class="fa-solid fa-pen text-secondary button-full"></i>
                                     </button>
-                                    <button aria-label="Supprimer" id="{{ 'delete_'~ menu.id }}" onclick="handleDeleteOffer(event)" class="">
+                                    <button aria-label="Supprimer" id="{{ 'delete_'~ menu.id }}" onclick="deleteMenu(event)" class="">
                                         <i class="fa-solid fa-trash bg-primary/50 button_profil button-full"></i>
                                     </button>
                                 </div>
